# spxquery

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  INSTALL.md  MANIFEST.in  README.md  UPDATE_DOC.md  example_usage.py  function design.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
core/: config.py  download.py  pipeline.py  query.py
docs/: conf.py  index.md  index.rst
docs/api/: core.md  index.md  processing.md  utils.md  visualization.md
docs/tutorials/: quickstart_demo.ipynb
docs/user_guide/: cutouts.md  parameters.md  pipeline.md  quality_control.md
example/: quickstart_demo.ipynb  sed_reconstruction_demo.ipynb  sed_reconstruction_demo_dsp.ipynb  sed_reconstruction_demo_swt.ipynb
example/demo_data/cloverleaf/: cloverleaf.json  cloverleaf.yaml  config_params.yaml
example/demo_data/cloverleaf/config/: my_custom_params.json
example/demo_data/cloverleaf/results/: query_summary.json  query_summary.yaml
example/demo_data/spec_refine/dip_output/: sed_metadata.yaml
example/demo_data/spec_refine/dsp_output/: sed_metadata.yaml
log/: 0.1.0.md  0.1.x.md  0.2.0.md  0.2.x.md
processing/: __init__.py  fits_handler.py  lightcurve.py  magnitudes.py  photometry.py  variability.py  variability_pipeline.py
src/spxquery/: __init__.py
src/spxquery/core/: __init__.py  config.py  download.py  pipeline.py  query.py
src/spxquery/processing/: fits_handler.py  lightcurve.py  magnitudes.py  model_photometry.py  photometry.py  psf_extraction.py  psf_utils.py
src/spxquery/sed/: GradingDescend.md  Integration.md  README.md  SpecRefine.md  __init__.py  config.py  data_loader.py  data_structures.py  hyperparameter_groups.py  matrices.py  plots.py  reconstruction.py  regularization.py  solver.py  solver_torch.py  stitching.py  tuning.py  validation.py
src/spxquery/utils/: helpers.py  params.py  spherex_mef.py
src/spxquery/visualization/: plots.py
tests/: test_advanced_config.py
utils/: __init__.py  helpers.py
visualization/: __init__.py  plots.py  variability_plots.py
