[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "spxquery"
version = "0.1.1"
description = "SPHEREx time-domain analysis package for querying and analyzing spectral image data"
readme = "README.md"
license = "MIT"
authors = ["Wenke Ren <wenkeren.astro@gmail.com>"]
maintainers = ["Wenke Ren <wenkeren.astro@gmail.com>"]
keywords = [
    "astronomy",
    "spherex",
    "spectroscopy",
    "time-domain",
    "photometry",
    "astrophysics"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
homepage = "https://github.com/WenkeRen/spxquery"
repository = "https://github.com/WenkeRen/spxquery"
documentation = "https://github.com/WenkeRen/spxquery#readme"

# Standard src layout - Poetry automatically discovers packages in src/
packages = [
    { include = "spxquery", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21.0"
astropy = "^5.0"
matplotlib = "^3.5.0"
pyvo = "^1.4"
tqdm = "^4.60.0"
photutils = "^1.5.0"
pandas = "^1.3.0"
scipy = "^1.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-cov = "^3.0"
black = "^22.0"
flake8 = "^4.0"
isort = "^5.0"
mypy = "^1.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^4.0"
sphinx-rtd-theme = "^1.0"
nbsphinx = "^0.8"

[tool.poetry.group.notebooks.dependencies]
jupyter = "^1.0"
ipython = "^8.0"
notebook = "^6.4"

[tool.poetry.scripts]
spxquery = "spxquery.core.pipeline:run_pipeline"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=spxquery --cov-report=html --cov-report=term"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
