[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "spxquery"
version = "0.2.0"
description = "SPHEREx time-domain analysis package for querying and analyzing spectral image data"
readme = "README.md"
license = "MIT"
authors = ["Wenke Ren <wenkeren.astro@gmail.com>"]
maintainers = ["Wenke Ren <wenkeren.astro@gmail.com>"]
keywords = [
    "astronomy",
    "spherex",
    "spectroscopy",
    "time-domain",
    "photometry",
    "astrophysics"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
homepage = "https://github.com/WenkeRen/spxquery"
repository = "https://github.com/WenkeRen/spxquery"
documentation = "https://github.com/WenkeRen/spxquery#readme"

# Standard src layout - Poetry automatically discovers packages in src/
packages = [
    { include = "spxquery", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
numpy = ">=1.26.0,<3.0.0"
astropy = "^7.0"
matplotlib = "^3.9"
pyvo = "^1.6"
tqdm = "^4.64"
photutils = "^2.0"
pandas = "^2.0"
scipy = "^1.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
black = "^25.9.0"
flake8 = "^7.3.0"
isort = "^7.0.0"
mypy = "^1.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^8.2.3"
sphinx-rtd-theme = "^3.0"
nbsphinx = "^0.8"

[tool.poetry.group.notebooks.dependencies]
jupyter = "^1.0"
ipython = "^9.6.0"
notebook = "^7.4.7"

[tool.poetry.scripts]
spxquery = "spxquery.core.pipeline:run_pipeline"

[tool.black]
line-length = 100
target-version = ['py311', 'py312', 'py313']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=spxquery --cov-report=html --cov-report=term"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
